fix safari stretch

--- a/sass/partials/_content.scss
+++ b/sass/partials/_content.scss
@@ -466,9 +466,9 @@
 		position: relative;
 		background: #FFFC00;
 		display: flex;
+		align-items: flex-start;
 		border-radius: 10px;
 		padding: 40px;
-
 
 		@media only screen and (min-width : 769px) {
 			padding: 60px;
